GNOME Bugzilla – Bug 591438
dfb_events_dispatch is not thread safe
Last modified: 2009-11-30 05:10:38 UTC
Steps to reproduce: Run a multithreaded GTK+ app. Stack trace: Not necessary. Other information: Fix must be: static void dfb_events_dispatch (void) { GdkDisplay *display = gdk_display_get_default (); GdkEvent *event; GDK_THREADS_ENTER (); while ((event = _gdk_event_unqueue (display)) != NULL) { if (_gdk_event_func) (*_gdk_event_func) (event, _gdk_event_data); gdk_event_free (event); } GDK_THREADS_LEAVE (); }
Created attachment 140429 [details] [review] Made dfb_events_dispatch thread save.
Comment on attachment 140429 [details] [review] Made dfb_events_dispatch thread save. Looks correct.
Comment on attachment 140429 [details] [review] Made dfb_events_dispatch thread save. commit ee2c797e700ec933fafce48b405dda53fdb228da