[gdk/directfb] Made dfb_events_dispatch() thread save

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=591438